[package]
name = "arc110"
version = "0.1.0"
authors = ["sac4van <sac4van@local>"]
edition = "2018"

# dependencies added to new project
[dependencies]
proconio = { version = "0.4.1", features = ["derive"] }
itertools = { version = "0.10.0" }
priority_queue = { version = "1.0.5" }

[profile.release]
lto = true
panic = 'abort'
